add auth router and edit swagger
