# routes/routes.go
@@ -23,13 +23,13 @@ func SetupRouter() *gin.Engine {
 	userController := controllers.NewUserController(rdb)
 	userProfileController := controllers.NewUserProfileController(rdb)
 
-	r.POST("/register", userController.Register)
-	r.POST("/confirm-otp", userController.ConfirmOTP)
-	r.POST("/confirm-otp-create", userController.ConfirmOTPCreate)
-	r.POST("/set-region-password-final", userController.SetRegionPasswordFinal)
-	r.POST("/login", userController.Login)
-	r.POST("/forgot-password", userController.ForgotPassword)
-	r.POST("/reset-password", userController.ResetPassword)
+	r.POST("/auth/register", userController.Register)
+	r.POST("/auth/confirm-otp", userController.ConfirmOTP)
+	r.POST("/auth/confirm-otp-create", userController.ConfirmOTPCreate)
+	r.POST("/auth/set-region-password-final", userController.SetRegionPasswordFinal)
+	r.POST("/auth/login", userController.Login)
+	r.POST("/auth/forgot-password", userController.ForgotPassword)
+	r.POST("/auth/reset-password", userController.ResetPassword)
 	r.GET("/auth/google", userController.GoogleLogin)
 	r.GET("/auth/google/callback", userController.GoogleCallback)
 	r.POST("/auth/google/complete", userController.GoogleComplete)
